background color not changing on mobile device. Stackover flow issue resolved

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -104,11 +104,11 @@
   }
 
   .correct {
-    background-color: green;
+    background-color: green !important;
   }
 
   .incorrect {
-    background-color: red;
+    background-color: red !important;
   }
 
   /* Instructions Tab */
